k8s/manifests/prebase/flux-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames:
    - "flux.${services_hostname_suffix}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-web
          port: 9080
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-web-host-network-ingress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-system-flux-web
      app.kubernetes.io/name: flux-operator
  ingress:
    # Envoy gateway is running on hostNetwork
    - fromEntities:
        - host
        - remote-node
